# geocoding_api

./: .gitignore  Makefile  README.md  config.json  main.py  pyproject.toml
scripts/: set_env.sh
src/: responses.py
src/models/: __init__.py  address.py  coordinates.py  failure.py  languages.py  place.py  result.py  success.py
src/services/: abstract.py  cache.py  config.py
src/services/geocoders/: __init__.py  nominatim.py
src/services/reversers/: __init__.py  geoapify.py  here.py  nominatim.py
tests/services/reversers/: test_nominatim.py
