[project]
name = "geocoding_api"
version = "0.1.0"
description = "A FastAPI-based geocoding API that integrates multiple reverse geocoding services, allowing flexible and dynamic location lookup using external providers like Geoapify, HERE, and Nominatim."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "redis>=6.2.0",
    "uvicorn>=0.34.2",
]
